--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "next-images": "^1.6.2",
     "react": "17.0.1",
     "react-dom": "17.0.1",
-    "theme-ui": "^0.3.4"
+    "styled-components": "^5.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.10",
@@ -26,7 +26,9 @@
     "@types/next": "^9.0.0",
     "@types/node": "^14.14.14",
     "@types/react": "^17.0.0",
+    "@types/styled-components": "^5.1.7",
     "babel-jest": "^26.6.3",
+    "babel-plugin-inline-react-svg": "^1.1.2",
     "eslint": "^7.16.0",
     "eslint-config-prettier": "^7.0.0",
     "eslint-plugin-prettier": "^3.3.0",
