--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "coverage": "jest --coverage"
   },
   "dependencies": {
+    "axios": "^0.21.0",
     "next": "10.0.3",
     "next-images": "^1.6.2",
     "react": "17.0.1",
