--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "jest": "^26.6.3",
     "jest-dom": "^4.0.0",
     "prettier": "^2.2.1",
+    "sass": "^1.30.0",
     "typescript": "^4.1.3"
   }
 }
