--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "eslint-plugin-prettier": "^3.3.0",
     "jest": "^26.6.3",
     "jest-dom": "^4.0.0",
+    "msw": "^0.24.2",
     "prettier": "^2.2.1",
     "sass": "^1.30.0",
     "typescript": "^4.1.3"
